@@ -1,133 +1,148 @@
 # JLud2D
 
-JLud2D is an old-school engine for games, currently in Java 8. It is compatible with [Tiled](http://www.mapeditor.org) maps, RPG-style characters and sprites, and MP3, MIDI, VGM, S3M, MOD and XM music formats.
+JLud2D is an old-school 2D game engine, originally written in Java 8 and now being ported to **TypeScript + Phaser**. It is compatible with [Tiled](http://www.mapeditor.org) maps and drives an RPG-style demo (a Phantasy Star I engine remake), a platformer demo (Alex Kidd), an open-world demo, and a chiptune music player demo.
 
-<!---
-![Screenshot of Alex Kidd](/screenshots/Ak_1.png?raw=true "Alex Kidd") ![Screenshot of Sully Chronicles](/screenshots/Sully_2.png?raw=true "Sully Chronicles") ![Screenshot of Phantasy Star Remake](/screenshots/PS_1.png?raw=true "Phantasy Star")  
-![Screenshot of Phantasy Star Generations](/screenshots/PSG1.png?raw=true "Phantasy Star Generations")
--->
 <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/Ak_1.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/Ak_2.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/JLud2D_Island.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/Sully_2.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/Sully_3.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/PS_1.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/PS_2.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/PS_Battle3.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/PS_Dungeon.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/PSG1.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/PSG2.png" width="200" height="150"> <img src="https://github.com/rafael-esper/JLud2D/blob/master/screenshots/JLud2d_Warrior.png" width="200" height="150">
 
+## From Java to TypeScript: why this port exists
 
-## Overview
+The original engine (kept for reference in [`java/`](java/), with the Phantasy Star game data in [`public/ps/`](public/ps/)) is a Java 8 desktop application: you download a `.jar` and run it with the `java` command in a native window. That's fine if you have a JRE installed, but it means no browser and no mobile play.
 
-The engine provides useful classes and methods for rapid development. 
+The new engine, in [`src/`](src/), reimplements the same architecture — entity/camera system, script-driven map events, Tiled JSON maps, chiptune music — on top of **TypeScript + [Phaser 3](https://phaser.io/)**, so the same games run instantly in any modern browser, on desktop or mobile, with no install step. Porting is done demo-by-demo and map-by-map, cross-referencing the Java originals class-for-class (`Camineet.java` → `Camineet.ts`, `PSDungeon.java` → `PSDungeon.ts`, etc.) so behavior matches the original as closely as possible. See [`TASKS.md`](TASKS.md) for the live status of what's ported and what's still in progress.
 
-Below is an example of switching from a map to another one:
-```
-	void exit() {
-		mapswitch(Planet.PALMA, 84, 49);		
-	}
-```
+| | Java version (legacy) | TypeScript version (this port) |
+|---|---|---|
+| Runtime | JRE 8, native window | Any modern browser |
+| Distribution | Downloadable `.jar` files | Static site (Vite build) |
+| Rendering | Java2D | Phaser 3 (WebGL/Canvas), pixel-art mode |
+| Input | Keyboard | Keyboard, gamepad, and touch (with on-screen virtual controls) |
+| Audio | MP3, MIDI, VGM, S3M, MOD, XM | VGM chiptune playback via a custom AudioWorklet emulator (see [`src/core/vgm2/`](src/core/vgm2/)); more formats planned |
+| Status | Feature-complete, frozen | Actively being ported — Phantasy Star demo is the current focus |
 
-Here is an example of a map script used when talking with an entity:
-```
- void robot() {
-		EntStart();
-		PSMenu.Stext("You are trespassing. Go back!"));
-		EntFinish();
-	}
-```
+## Features
 
-### List of Features
+- **2D tile-based engine** driven by [Tiled](http://www.mapeditor.org) JSON maps, with an entity/camera system (`MainEngine`) and a script/event hook system (`ScriptEngine`) for map triggers, NPC dialogue, and scene transitions.
+- **Fixed low-resolution pixel-art rendering** (320×240 by default) that scales cleanly to any screen size while staying crisp.
+- **Cross-platform input**: keyboard, gamepad, and touch, with rebindable keys and on-screen virtual d-pad/buttons for mobile.
+- **VGM chiptune music playback** through a from-scratch AudioWorklet-based sound-chip emulator (no external audio libraries).
+- **Multiple demos in one build**, selectable from an in-app menu:
+  - **Island World** — open-world exploration demo (complete)
+  - **Alex Kidd** — platformer demo (partial)
+  - **Golden Axe Warrior** map demo (partial)
+  - **Phantasy Star** — full RPG remake: title screen, overworld, city/world maps, first-person dungeons, shops, menus, and a battle system (in progress — see [`TASKS.md`](TASKS.md))
+  - **VGM Player** — chiptune music player demo (complete)
+- **In-browser settings UI**: volume, control remapping, fullscreen, and demo switching, without touching config files.
+- **Internationalization**: language packs for the Phantasy Star demo (English, Brazilian Portuguese/TecToy script, and others) driven by `.properties`-style files.
 
-- 2D Engine;
-- Multi-plataform;
-- [Tiled](http://www.mapeditor.org) support (JSON format), a free, easy to use and flexible tile map editor;
-- You could run and debug the game code in some advanced IDE like Eclipse or Netbeans;
-- Music formats: MP3, MIDI, VGM, S3M, MOD and XM;
-- Sound formats: WAV, VOC and MP3;
-- Graphic formats: PNG, JPG, GIF, PCX and others - basically all you can load using Java;
-- Easy-to-use API;
-- Suitable for 2D board games, RPG games, platform games and many more.
+## Getting started: play in the browser
 
+Requires [Node.js](https://nodejs.org/) (18+) and npm.
 
-## Getting Started: I want to play
-
-### Running Pre-built JARs (Original Method)
-You can download just the demo / game you want to play and execute it with Java 8 command line:
-```
-java -jar Demo.jar
-```
-
-They are located in the /redist folder.
-
-### Running from Source (Updated Method)
-
-**Prerequisites:**
-- Maven installed
-- Java 8+ (tested with Java 21)
-
-**Build the project:**
 ```bash
-mvn clean compile
+npm install       # install dependencies (first time only)
+npm run dev        # start the dev server
 ```
 
-**Copy demo assets to classpath:**
+Then open **http://localhost:5173** in your browser. The boot screen lets you pick which demo to run.
+
+To build a static, deployable site instead:
+
 ```bash
-# For Demo1 (Island World)
-mkdir -p target/classes/demos/demo1 && cp src/demos/demo1/* target/classes/demos/demo1/
-
-# For Demo2 (Golden Warrior)
-mkdir -p target/classes/demos/demo2 && cp src/demos/demo2/* target/classes/demos/demo2/
-
-# For Alex Kidd Demo
-mkdir -p target/classes/demos/ak && cp -r src/demos/ak/* target/classes/demos/ak/
-
-# For Phantasy Star Demo
-mkdir -p target/classes/demos/ps && cp -r src/demos/ps/* target/classes/demos/ps/
+npm run build       # type-check + production build → dist/
+npm run preview      # serve the production build locally
 ```
 
-**Run demos with proper Java module access:**
+### Other useful commands
+
 ```bash
-# Demo1 - Island World
-MAVEN_OPTS="--add-opens java.desktop/java.awt.image=ALL-UNNAMED --add-opens java.desktop/java.awt.color=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/sun.java2d=ALL-UNNAMED --add-opens java.desktop/sun.awt.image=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED" mvn exec:java -Dexec.mainClass="demos.demo1.Demo1"
-
-# Demo2 - Golden Warrior
-MAVEN_OPTS="--add-opens java.desktop/java.awt.image=ALL-UNNAMED --add-opens java.desktop/java.awt.color=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/sun.java2d=ALL-UNNAMED --add-opens java.desktop/sun.awt.image=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED" mvn exec:java -Dexec.mainClass="demos.demo2.Demo2"
-
-# Alex Kidd Demo
-MAVEN_OPTS="--add-opens java.desktop/java.awt.image=ALL-UNNAMED --add-opens java.desktop/java.awt.color=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/sun.java2d=ALL-UNNAMED --add-opens java.desktop/sun.awt.image=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED" mvn exec:java -Dexec.mainClass="demos.ak.AK"
-
-# Phantasy Star Demo
-MAVEN_OPTS="--add-opens java.desktop/java.awt.image=ALL-UNNAMED --add-opens java.desktop/java.awt.color=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/sun.java2d=ALL-UNNAMED --add-opens java.desktop/sun.awt.image=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED" mvn exec:java -Dexec.mainClass="demos.ps.Phantasy"
+npm run type-check   # TypeScript type checking only, no build output
+npm test             # run the Vitest test suite
 ```
 
-**Note:** The `--add-opens` flags are required for Java 9+ to allow the older Gson library to access private fields via reflection.
+### Controls
 
-*Game Controls:*
-- F5 for sound off/on
-- F6 for full screen
-- F7/F8 to increase/decrease frame delay.
+| Action | Keyboard | Gamepad | Touch |
+|---|---|---|---|
+| Move | Arrow keys / WASD | D-pad / left stick | Virtual d-pad |
+| Button 1 (confirm/action) | Z or J | A | On-screen button |
+| Button 2 (cancel/back) | X or K | B | On-screen button |
+| Button 3 | C or L | X | On-screen button |
+| Start | Enter | Start | On-screen button |
+| Menu / Pause | Esc | — | On-screen button |
+| Fullscreen | F11 | — | — |
+| Screenshot | F12 | — | — |
 
-## Getting Started: I want to develop
+Keys can be remapped at runtime from the in-app **Settings** menu; custom bindings are saved to `localStorage`.
 
-JLud2D uses [Maven](https://maven.apache.org/) as a Dependency Management system. An intermediate to experienced Java developer should have no problem working with the repository. Feel free to fork it and contribute.
+## Configuration
 
-### Tips
+Default settings live in [`config.json`](config.json) at the project root and are loaded at startup (bindings changed in the in-app Settings menu are then saved to `localStorage` and take precedence on future loads):
 
-- Jar files are case-sensitive, so be sure to check when looking for resources inside it: sounds, maps, animations, images, etc
-- Develop always with internationalization in mind. Internationalization Links: http://java.sun.com/developer/technicalArticles/Intl/ResourceBundles and http://www.roseindia.net/java/example/java/swing/internationalization.shtml
+```json
+{
+  "xRes": 320,
+  "yRes": 240,
+  "windowMode": true,
+  "fullscreen": false,
+  "noSound": false,
+  "masterVolume": 1.0,
+  "musicVolume": 0.8,
+  "sfxVolume": 1.0,
+  "logConsole": true,
+  "debug": false,
+  "showFPS": false,
+  "startupDemo": "demo1",
+  "keyboardEnabled": true,
+  "gamepadEnabled": true,
+  "touchEnabled": true,
+  "antialias": false,
+  "pixelArt": true,
+  "roundPixels": true
+}
+```
 
+| Key | Meaning |
+|---|---|
+| `xRes` / `yRes` | Base game resolution in pixels (rendering is fixed at this size, then scaled to fit the browser window) |
+| `windowMode` / `fullscreen` | Initial display mode |
+| `noSound` | Disable all audio |
+| `masterVolume` / `musicVolume` / `sfxVolume` | Volume levels, `0.0`–`1.0` |
+| `logConsole` | Print engine logs to the browser console |
+| `debug` | Enable Phaser physics debug overlay and verbose logging |
+| `showFPS` | Show the FPS counter overlay |
+| `startupDemo` | Which demo scene to boot into (`demo1`, `demo2`, `demo3`, `ak`, `ps`) |
+| `keyboardEnabled` / `gamepadEnabled` / `touchEnabled` | Enable/disable each input source |
+| `antialias` / `pixelArt` / `roundPixels` | Rendering mode — keep these as-is (`false`/`true`/`true`) for crisp pixel art |
 
-### Planned features:
+## The legacy Java version
 
-- Caching for fast loading
-- Implement music volume
-- Joystick support
-- Socket implementation
-- Movie playback implementation
-- LUA parser for easy scripting
-- Mobile support
-- Check 3D API with fixed-z (~2D) to enable Video optimization
+The Java 8 engine is retired: the full original source (`core/`, `domain/`, `audio/`) has been removed from the repository, and prebuilt demo `.jar` files are no longer distributed. Only the Phantasy Star game-logic classes remain, under [`public/ps/`](public/ps/), kept purely as line-by-line reference material while the TypeScript port is written — they are not buildable or runnable on their own.
 
-### Bugs and Updates:
+## Project layout
 
-- Check VGM loops (right now they aren't looping)
-- VGMs don't play, just VGZ.
-- Implement key mapping (b1,b2,b3,b4)
-- Verify ColorFilter, Implement Rotate, Flip, etc (See Graphics2d Rotate, Scale, etc)
-- Make it more OO (less static methods, no public properties, no static imports)
-- Entities' movement get screwed after talking to them
-- Investigate why sometimes the transparency stops working (when swapping window/full screen)
+```
+src/
+  main.ts               # Entry point — registers all Phaser scenes
+  core/                  # MainEngine, ScriptEngine, VGM music emulator
+  config/                # GameConfig, Controls / InputManager
+  domain/                # Entity, CHR, TiledMap, Sound
+  utils/                 # FPSDisplay, ResponsiveScaler, DemoUI
+  demos/
+    demo1/               # Island World (complete)
+    demo2/               # Golden Axe Warrior map (partial)
+    demo3/               # VGM music player (complete)
+    ak/                  # Alex Kidd platformer (partial)
+    ps/                  # Phantasy Star RPG (partial — main focus)
 
+public/ps/               # Original Java source + map JSON + art assets for the PS demo
+java/                    # Full original Java engine source (reference only)
+config.json              # Runtime config (resolution, volume, startup demo)
+```
+
+## Status and roadmap
+
+The Phantasy Star demo is the current priority — the goal is a fully playable RPG from title screen to end credits, matching the original. See [`TASKS.md`](TASKS.md) for the detailed, up-to-date task breakdown (game loop, missing maps/dungeons, battle system, menus, save/load, etc.).
+
+## License
+
+JLud2D is licensed under the [GNU General Public License v3.0](LICENSE) or later. You are free to use, modify, and redistribute this code, including commercially — but any distributed modified version or derivative work must also be released under the GPL, with source code available. See the [`LICENSE`](LICENSE) file for the full text.
